Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
dev
-
16ef3aaa7 (dev)
-
2025wk06s1QtforAndroid
Description
Test case: tst_Android::testFullScreenDimensions has failed 12 times, crashed 0 and was flaky 38 times last week.The test has blocked around 12 Gerrit changes past weekCoin log excerpt from failed run: agent:2025/01/31 13:19:03 build.go:404: FAIL! : tst_Android::testFullScreenDimensions() Compared values are not the sameagent:2025/01/31 13:19:03 build.go:404: Actual (screen->availableGeometry().height()): 592 agent:2025/01/31 13:19:03 build.go:404: Expected (realSize.getField("y")) : 640 agent:2025/01/31 13:19:03 build.go:404: Loc: [/home/qt/work/qt/qtbase/tests/auto/corelib/platform/android/tst_android.cpp(299)] ... Full log at : coin log Statistics about test fails: link to grafana dashboard Information about the Qt test system: qt test execution information
Attachments
For Gerrit Dashboard: QTBUG-133456 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
624062,2 | Android: directly set available geometry from handleLayoutSizeChanged() | dev | qt/qtbase | Status: MERGED | +2 | 0 |