Android: directly set available geometry from handleLayoutSizeChanged()

Don't check for current primary screen available geometry as that value
might not have been set (invokeMethod() is used for that) from a
previous call. Also, in any case, handleLayoutSizeChanged() is only ever
called when the root layout size has really changed.

Amends 0f2c6450201bfa1e612175cddf7481ab72eb4620.

Fixes: QTBUG-133456
Change-Id: I3219529d0f18d4cfc8a9d0eca7573de57ae9e43d
Reviewed-by: Petri Virkkunen <petri.virkkunen@qt.io>